--- a/.gitignore
+++ b/.gitignore
@@ -128,5 +128,5 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-outputs/*.png
-outputs/*.pdf
+bullshitgraphs/outputs/*.png
+bullshitgraphs/outputs/*.pdf
