--- a/.github/workflows/build-testing-docker-image.yaml
+++ b/.github/workflows/build-testing-docker-image.yaml
@@ -25,4 +25,4 @@ jobs:
       - name: Use buildx builder
         run: docker buildx use arm-x86-multi-builder
       - name: Build Docker image latest
-        run: docker buildx build --platform linux/amd64 linux/arm64 -t ghcr.io/neilschark/bullshitgraphs:latest_testing . --push
+        run: docker buildx build --platform linux/amd64,linux/arm64 -t ghcr.io/neilschark/bullshitgraphs:latest_testing . --push
